--- a/styles/lobby.css
+++ b/styles/lobby.css
@@ -9,14 +9,10 @@
 }
 
 .player-panel {
-    color: yellow;
-    text-transform: uppercase;
-    font-size: 1.5vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 12vw;
-    background-color: rgba(0, 0, 0, 0.5);
     width: 33.333%
 }
 
@@ -57,4 +53,11 @@
     width: 20vw;
     height: auto;
     cursor: pointer;
+}
+
+.player-name {
+    text-shadow: 0 0 50px black;
+    color: yellow;
+    text-transform: uppercase;
+    font-size: 3vw;
 }
