--- a/styles/legend.css
+++ b/styles/legend.css
@@ -2,11 +2,18 @@
     display: none;
     width: 100%;
     height: calc(100vh - 4.2vw);
+    align-items: center;
+    justify-content: center;
+    gap: 15vw;
 }
 
 #legend-screen::before {
+    z-index: -1;
     content: '';
     display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     background-image: url("../media/images/legendscreenbackground.png");
@@ -15,12 +22,9 @@
 }
 
 #legend-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
+    margin-left: 10vw;
 }
 
 .legend-row {
@@ -35,9 +39,34 @@
     background: transparent;
     cursor: pointer;
     clip-path: polygon(33.333% 0%, 100% 0%, 66.666% 100%, 0% 100%);
+    user-select: none;
 }
 
 .legend-button img {
-    width: 9vw;
+    width: auto;
+    height: 6vw;
+}
+
+#legend-image {
+    width: 20vw;
     height: auto;
+}
+
+.nolegend {
+    cursor: initial;
+}
+
+#legend-container h1 {
+    text-transform: uppercase;
+    color: white;
+    font-size: 4vw;
+    margin: 0;
+}
+
+#legend-container p {
+    color: gray;
+    font-size: 2vw;
+    margin: 0;
+    margin-bottom: 2vw;
+    margin-top: 1vw;
 }
